--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Indecision app</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
     <div id="app"></div>
-    <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
-    <script src="/script/app.js"></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
