--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Indecision app</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" type="impage/png" href="/public/images/favicon.png"/>
 </head>
 
 <body>
